<resources>
    <string name="app_name">PhotoBlogTVACLesson</string>
    <string name="welcome">Welcome to Photo Blog</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Login to Account</string>
    <string name="create_account">Create Account</string>
    <string name="search">Search</string>
    <string name="settings">Account Settings</string>
    <string name="exit">Log Out</string>
    <string name="registration_logo">Register a new Account</string>
    <string name="have_account">Already have an Account?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="setup_name">Your name</string>
    <string name="setup_button">Save account settings</string>
    <string name="newPostHint">Add Description</string>
    <string name="postBtn">Post</string>
    <string name="menuHome">Home</string>
    <string name="menuNotif">Notification</string>
    <string name="menuAccount">Account</string>
    <string name="postUserName">User Name</string>
    <string name="postTime">Post Time</string>
    <string name="postDescription">Description Post</string>
    <string name="Comments">Comments:</string>
</resources>
